<resources>
    <string name="app_name">RodriguezLealMarioExtraDiciembre24</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="addContactos">Añadir Contacto</string>
    <string name="zero">0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="cancel">C</string>
    <string name="inverse">INV</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="calculadora">Calculadora</string>
    <string name="agenda">Agenda</string>
    <string name="nota">Nota</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo electrónico</string>
    <string name="direccion">Dirección</string>
    <string name="nick">Nick</string>
</resources>