<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">


    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/zero"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:padding="16dp"
        android:background="@color/gray_dark" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4"
        android:layout_marginTop="16dp">


        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:background="@color/gray"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btnInvert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/inverse"
            android:textSize="18sp"
            android:background="@color/gray"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/divide"
            android:textSize="18sp"
            android:background="@color/gray"
            android:textColor="@color/white" />


        <Button android:id="@+id/btn7" android:text="@string/seven" style="@style/CalculatorButton" />
        <Button android:id="@+id/btn8" android:text="@string/eight" style="@style/CalculatorButton" />
        <Button android:id="@+id/btn9" android:text="@string/nine" style="@style/CalculatorButton" />
        <Button android:id="@+id/btnMultiply" android:text="@string/multiply" style="@style/OperationButton" />


        <Button android:id="@+id/btn4" android:text="@string/four" style="@style/CalculatorButton" />
        <Button android:id="@+id/btn5" android:text="@string/five" style="@style/CalculatorButton" />
        <Button android:id="@+id/btn6" android:text="@string/six" style="@style/CalculatorButton" />
        <Button android:id="@+id/btnSubtract" android:text="@string/minus" style="@style/OperationButton" />


        <Button android:id="@+id/btn1" android:text="@string/one" style="@style/CalculatorButton" />
        <Button android:id="@+id/btn2" android:text="@string/two" style="@style/CalculatorButton" />
        <Button android:id="@+id/btn3" android:text="@string/three" style="@style/CalculatorButton" />
        <Button android:id="@+id/btnAdd" android:text="@string/plus" style="@style/OperationButton" />


        <Button android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/zero"
            android:textSize="24sp"
            android:background="@color/gray"
            android:textColor="@color/white" />

        <Button android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:text="@string/equal"
            android:textSize="24sp"
            android:background="@color/gray"
            android:textColor="@color/white" />
    </GridLayout>
</LinearLayout>

