<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/etContactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etContactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etContactAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion" />
    <EditText
        android:id="@+id/etContactNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick" />
</LinearLayout>