<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">


    <ImageButton
        android:id="@+id/calculatorButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/calculadora"
        android:contentDescription="@string/calculadora"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"/>


    <Button
        android:id="@+id/agendaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agenda"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/notaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota"
        android:layout_marginTop="16dp"/>

</LinearLayout>

